--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "react-vivus": "0.0.2",
+    "vivus": "^0.4.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
